--- a/conf/analyzer_hyps_20241130.conf
+++ b/conf/analyzer_hyps_20241130.conf
@@ -2,10 +2,9 @@
 #analyzer_hyps_20241027.conf
 #
 
-UNPACK:		../UNPACK/unpacker.xml
-DIGIT:		../DIGIT/digit_data_hyps_20241027.xml
-# CMAP:		../CMAP/channel_map_vmeeasiroc_hyps_20241123.xml
-CMAP:		../CMAP/channel_map_vmeeasiroc_hyps_20241119.xml
+UNPACK:		../UNPACK/unpacker_online.xml
+DIGIT:		../DIGIT/digit_data_hyps_20241125.xml
+CMAP:		../CMAP/channel_map_hyps_20241130.xml
 BH2FLT:		../BH2FLT/BH2Filter_20180603
 DCGEO:		../DCGEO/DCgeom.param_CFT_KURAMA_LEPS_TGT1258
 DCDRFT:		../DCDRFT/DCDriftParam_e70_20240417
@@ -20,4 +19,4 @@ K18TM:		../K18TM/K18MatrixParamD2U_0
 MATRIX2D1:      ../MATRIX/mtx2d1_e42_GEANT4_Normal.txt
 MATRIX2D2:      ../MATRIX/mtx2d1_e42_GEANT4_tight.txt
 MATRIX3D:       ../MATRIX/mtx3d_e42_GEANT4.txt
-USER:		../USER/UserParam_hyps_20240926.txt
+USER:		../USER/UserParam_hyps_20241128.txt
