--- a/conf/analyzer_hyps_20241213.conf
+++ b/conf/analyzer_hyps_20241213.conf
@@ -9,7 +9,7 @@ BH2FLT:		../BH2FLT/BH2Filter_20180603
 DCGEO:		../DCGEO/DCGeomParam_hyps_20241213
 DCDRFT:		../DCDRFT/DCDriftParam_hyps_run01413
 DCTDC:		../DCTDC/DCTdcCalib_hyps_run01413
-HDPRM:		../HDPRM/HodoParam_e70_20230911
+HDPRM:		../HDPRM/HodoParam_hyps_20241213
 HDPHC:		../HDPHC/HodoPHCParam_02189
 # FLDMAP:		../../fieldmap/KuramaFieldMap_E07_20170907
 FLDNMR:		1.
@@ -20,3 +20,4 @@ MATRIX2D1:      ../MATRIX/mtx2d1_e42_GEANT4_Normal.txt
 MATRIX2D2:      ../MATRIX/mtx2d1_e42_GEANT4_tight.txt
 MATRIX3D:       ../MATRIX/mtx3d_e42_GEANT4.txt
 USER:		../USER/UserParam_hyps_20241206.txt
+CFTPED:		../CFTPED/pedestalCorOut2.txt.06171
