--- a/conf/analyzer_hyps_20241213.conf
+++ b/conf/analyzer_hyps_20241213.conf
@@ -21,3 +21,4 @@ MATRIX2D2:      ../MATRIX/mtx2d1_e42_GEANT4_tight.txt
 MATRIX3D:       ../MATRIX/mtx3d_e42_GEANT4.txt
 USER:		../USER/UserParam_hyps_20241206.txt
 CFTPED:		../CFTPED/pedestalCorOut2.txt.06171
+CFTPOS:         ../CFTPOS/CftPosParam_07058
