--- a/conf/analyzer_hyps_20241213.conf
+++ b/conf/analyzer_hyps_20241213.conf
@@ -22,3 +22,5 @@ MATRIX3D:       ../MATRIX/mtx3d_e42_GEANT4.txt
 USER:		../USER/UserParam_hyps_20241206.txt
 CFTPED:		../CFTPED/pedestalCorOut2.txt.06171
 CFTPOS:         ../CFTPOS/CftPosParam_07058
+BGOTEMP:        ../BGOTEMP/run08082.txt
+BGOCALIB:       ../BGOCALIB/BGOEnergyCalib.txt.08082
