Add EVSELECT param dir for eventdisplay. The analyzer_hyps_evdisp.conf was also updated.

--- a/conf/analyzer_hyps_evdisp.conf
+++ b/conf/analyzer_hyps_evdisp.conf
@@ -20,8 +20,12 @@ K18TM:		../K18TM/K18MatrixParamD2U_0
 MATRIX2D1:      ../MATRIX/mtx2d1_e42_GEANT4_Normal.txt
 MATRIX2D2:      ../MATRIX/mtx2d1_e42_GEANT4_tight.txt
 MATRIX3D:       ../MATRIX/mtx3d_e42_GEANT4.txt
-USER:		../USER/UserParam_hyps_20250124.txt.tmp
+USER:		../USER/UserParam_hyps_20250124.txt
 CFTPED:		../CFTPED/pedestalCorOut2.txt.250117
 CFTPOS:         ../CFTPOS/CftPosParam_07058
 BGOTEMP:        ../BGOTEMP/run08082.txt
 BGOCALIB:       ../BGOCALIB/BGOEnergyCalib.txt.08082
+# for run00240 (HYPS tracking w/ positive charge)
+#EVSELECT:       ../EVSELECT/event_002400.txt
+# for normal usage without event selection
+EVSELECT:       ../EVSELECT/event_dummy.txt
