add or update some parameter (HDPRM, HDPHC, FLDMAP, EVSELECT)

--- a/conf/analyzer_hyps_20250125.conf
+++ b/conf/analyzer_hyps_20250125.conf
@@ -10,9 +10,9 @@ TAGPLMTH:	../TAGPLMTH/TAGPLMatchParam_hyps_0
 DCGEO:		../DCGEO/DCGeomParam_hyps_20250121
 DCDRFT:		../DCDRFT/DCDriftParam_hyps_run01413
 DCTDC:		../DCTDC/DCTdcCalib_hyps_run01413
-HDPRM:		../HDPRM/HodoParam_hyps_20250109
-HDPHC:		../HDPHC/HodoPHCParam_02189
-# FLDMAP:		../../fieldmap/KuramaFieldMap_E07_20170907
+HDPRM:		../HDPRM/HodoParam_hyps_20250128
+HDPHC:		../HDPHC/HodoPHCParam_hyps_0
+FLDMAP:		../fieldmap/lepsSD53_std_v12_K18style_extend.dat
 FLDNMR:		1.
 FLDCALC:	1.
 PK18:		1.8
@@ -25,3 +25,5 @@ CFTPED:		../CFTPED/pedestalCorOut2.txt.250117
 CFTPOS:         ../CFTPOS/CftPosParam_07058
 BGOTEMP:        ../BGOTEMP/run08082.txt
 BGOCALIB:       ../BGOCALIB/BGOEnergyCalib.txt.08082
+# for normal usage without event selection
+EVSELECT:       ../EVSELECT/event_dummy.txt
