--- a/conf/analyzer_jsroot_scaler.conf
+++ b/conf/analyzer_jsroot_scaler.conf
@@ -1,3 +1,3 @@
-UNPACKER:	../UNPACK/unpacker_jsroot_scaler.xml
-DIGIT:		../DIGIT/digit_data_e70_20230608.xml
-CMAP:		../CMAP/channel_map_e70_20230613.xml
+UNPACK:		../UNPACK/unpacker_jsroot_scaler.xml
+DIGIT:		../DIGIT/digit_data_hyps_20250118.xml
+CMAP:		../CMAP/channel_map_hyps_20250119.xml
