--- a/conf/analyzer_hyps_cftphicor.conf
+++ b/conf/analyzer_hyps_cftphicor.conf
@@ -1,5 +1,5 @@
 #
-#analyzer_hyps_20241027.conf
+#analyzer_hyps_cftphicor.conf
 #
 
 UNPACK:		../UNPACK/unpacker_online.xml
@@ -22,6 +22,6 @@ MATRIX2D2:      ../MATRIX/mtx2d1_e42_GEANT4_tight.txt
 MATRIX3D:       ../MATRIX/mtx3d_e42_GEANT4.txt
 USER:		../USER/UserParam_hyps_20250124.txt
 CFTPED:		../CFTPED/pedestalCorOut2.txt.250117
-CFTPOS:         ../CFTPOS/CftPosParam_E40cor_1
+CFTPOS:         ../CFTPOS/CftPosParam_hyps_20250312
 BGOTEMP:        ../BGOTEMP/run08082.txt
 BGOCALIB:       ../BGOCALIB/BGOEnergyCalib.txt.08082
