update conf file to include CATCHPID

--- a/conf/analyzer_hyps_20250109.conf
+++ b/conf/analyzer_hyps_20250109.conf
@@ -25,3 +25,4 @@ CFTPED:		../CFTPED/pedestalCorOut2.txt.06171
 CFTPOS:         ../CFTPOS/CftPosParam_07058
 BGOTEMP:        ../BGOTEMP/run08082.txt
 BGOCALIB:       ../BGOCALIB/BGOEnergyCalib.txt.08082
+CATCHPID:       ../CATCHPID/CATCHPid.txt.08291
