--- a/conf/analyzer_hyps_20250125.conf
+++ b/conf/analyzer_hyps_20250125.conf
@@ -25,5 +25,6 @@ CFTPED:		../CFTPED/pedestalCorOut2.txt.250117
 CFTPOS:         ../CFTPOS/CftPosParam_07058
 BGOTEMP:        ../BGOTEMP/run08082.txt
 BGOCALIB:       ../BGOCALIB/BGOEnergyCalib.txt.08082
+CATCHPID:       ../CATCHPID/CATCHPid.txt.08291
 # for normal usage without event selection
 EVSELECT:       ../EVSELECT/event_dummy.txt
