--- a/conf/analyzer_hyps_evdisp.conf
+++ b/conf/analyzer_hyps_evdisp.conf
@@ -25,6 +25,7 @@ CFTPED:		../CFTPED/pedestalCorOut2.txt.250117
 CFTPOS:         ../CFTPOS/CftPosParam_07058
 BGOTEMP:        ../BGOTEMP/run08082.txt
 BGOCALIB:       ../BGOCALIB/BGOEnergyCalib.txt.08082
+CATCHPID:       ../CATCHPID/CATCHPid.txt.08291
 # for run00240 (HYPS tracking w/ positive charge)
 #EVSELECT:       ../EVSELECT/event_00240.txt
 # for normal usage without event selection
