Change conf files about jsroot

--- a/conf/analyzer_jsroot_scaler.conf
+++ b/conf/analyzer_jsroot_scaler.conf
@@ -1,3 +1,1 @@
-UNPACK:		../UNPACK/unpacker_jsroot_scaler.xml
-DIGIT:		../DIGIT/digit_data_hyps_20250118.xml
-CMAP:		../CMAP/channel_map_hyps_20250119.xml
+analyzer_jsroot_scaler_20250414.conf
