--- a/conf/analyzer_hyps_evdisp.conf
+++ b/conf/analyzer_hyps_evdisp.conf
@@ -3,14 +3,14 @@
 #
 
 UNPACK:		../UNPACK/unpacker_online.xml
-DIGIT:		../DIGIT/digit_data_hyps_20250118.xml
-CMAP:		../CMAP/channel_map_hyps_20250125.xml
+DIGIT:		../DIGIT/digit_data_hyps_20250416.xml
+CMAP:		../CMAP/channel_map_hyps_20250416.xml
 BH2FLT:		../BH2FLT/BH2Filter_20180603
 TAGPLMTH:	../TAGPLMTH/TAGPLMatchParam_hyps_0
-DCGEO:		../DCGEO/DCGeomParam_hyps_20250205
+DCGEO:		../DCGEO/DCGeomParam_hyps_20250414
 DCDRFT:		../DCDRFT/DCDriftParam_hyps_run00186
 DCTDC:		../DCTDC/DCTdcCalib_hyps_run00186
-HDPRM:		../HDPRM/HodoParam_hyps_20250128
+HDPRM:		../HDPRM/HodoParam_hyps_20250416
 HDPHC:		../HDPHC/HodoPHCParam_hyps_0
 FLDMAP:		../fieldmap/lepsSD53_std_v12_K18style_extend.dat
 FLDNMR:		1.
@@ -20,7 +20,8 @@ K18TM:		../K18TM/K18MatrixParamD2U_0
 MATRIX2D1:      ../MATRIX/mtx2d1_e42_GEANT4_Normal.txt
 MATRIX2D2:      ../MATRIX/mtx2d1_e42_GEANT4_tight.txt
 MATRIX3D:       ../MATRIX/mtx3d_e42_GEANT4.txt
-USER:		../USER/UserParam_hyps_20250124.txt
+#USER:		../USER/UserParam_hyps_20250124.txt
+USER:		../USER/UserParam_hyps_20250415.txt
 CFTPED:		../CFTPED/pedestalCorOut2.txt.250117
 CFTPOS:         ../CFTPOS/CftPosParam_07058
 BGOTEMP:        ../BGOTEMP/run08082.txt
