Change header messages (conf)

--- a/conf/analyzer_hyps_20251012.conf
+++ b/conf/analyzer_hyps_20251012.conf
@@ -1,5 +1,5 @@
-# File: analyzer_hyps_20251010.conf
-# note: Update TDC gate range in USER, after Common Stop timing modification
+# File: analyzer_hyps_20251012.conf
+# note: Change CMAP (TOF 1D)
 
 
 UNPACK:		../UNPACK/unpacker_online.xml
